# msk2bmpGUI

./: .gitignore  .gitmodules  CMakeLists.txt  Q's Beta Fallout Image Editor License.txt  README.md  SDL 2.0 License.txt  UpgradeLog.htm  UpgradeLog2.htm  build_linux.cpp  build_linux.sh  build_linux_dearimgui.c  build_linux_glfw.c  build_linux_glfw_null.c  imgui.ini  msk2bmpGUI.sln  msk2bmpGUI.vcxproj  msk2bmpGUI.vcxproj.filters  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.psess  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.sln
Licenses/: Q's Beta Fallout Image Editor License.txt  tiny file dialogs License.txt
Release/: imgui.ini  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.iobj  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.ipdb
Release/config/: msk2bmpGUI.cfg
dependencies/GLAD/: .gitignore
dependencies/GLAD/include/glad/: glad.h
dependencies/imgui-docking/: CMakeLists.txt
dependencies/imgui-docking/include/: ImGui_SDL_Render.h
dependencies/tinyfiledialogs/: CMakeLists.txt
docs/: town_tile_calculations.txt
images/: HANPWRAK.FRM  wrldmp00.MSK
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/: B_Endian.cpp  B_Endian.h  Edit_Animation.cpp  Edit_Animation.h  Edit_Image.cpp  Edit_Image.h  Edit_TILES_LST.cpp  Edit_TILES_LST.h  FRM_Animate.cpp  FRM_Animate.h  FRM_Convert.cpp  FRM_Convert.h  ImFileDialog.cpp  ImGui_SDL_Render.cpp  ImGui_SDL_Render.h  Image2Texture.cpp  Image2Texture.h  Image_Render.cpp  Load_Animation.cpp  Load_Animation.h  Load_Files.cpp  Load_Files.h  Load_Settings.cpp  Load_Settings.h  MSK_Convert.cpp  MSK_Convert.h  MonotoneZombie_FileOpenDialog.cpp  MonotoneZombie_FileOpenDialog.h  Palette_Cycle.cpp  Palette_Cycle.h  Palette_Shader.vert  Preview_Image.cpp  Preview_Image.h  Preview_Tiles.cpp  Preview_Tiles.h  README.md  Save_Files.cpp  Save_Files.h  Save_Mask.cpp  Save_Mask.h  (+32 more)
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/Release/msk2bmpG.C8648FE9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.lastbuildstate  msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs.write.1u.tlog
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/config/: msk2bmpGUI.cfg  msk2bmpGUIa.cfg
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/dependencies/GLAD/src/: glad.c
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/dependencies/imgui-docking/src/: ImGui_SDL_Render.cpp
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/dependencies/tinyfiledialogs/: tinyfiledialogs.h
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/glad/include/glad/: glad.h
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/glad/src/: glad.c
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/images/: 400x400.FRM  HANPWRAL.FRM  imgui.ini  temp001.FRM  temp001a.FRM  temp001b.FRM  temp002.FRM  this image looks borked.FRM  wrldmp00.FRM
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h  imgui_internal.h  imgui_widgets.cpp
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/imgui-docking/: imgui.h
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/resources/palette/: color.txt
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/resources/shaders/: passthru_shader.frag  passthru_shader.vert  render_PAL.frag
msk2bmpGUI_C_C++_imgui_sdl2_tinyfiledialogs/shaders/: Palette_Shader.vert  Shader_Stuff.cpp  Shader_Stuff.h  color_cycle_1D.frag  color_cycle_2D.frag  pass_thru_shader.frag  render_PAL.frag  render_frm.frag  shader_class.cpp  zoom_shader.vert
specs/: .gitignore  CMakeLists.txt
src/: Image_Render.h  Load_Files.cpp  Zoom_Pan.cpp  build_linux.cpp  build_linux_c_libs.c  build_linux_cpp_libs.cpp  build_linux_glfw1.c  build_linux_glfw2.c  display_FRM_OpenGL.cpp  msk2bmpGUI.cpp  platform_io.cpp
src/QFO2Tool/: B_Endian.cpp  B_Endian.h  CMakeLists.txt  Edit_Animation.cpp  Edit_Animation.h  Edit_Image.cpp  Edit_Image.h  Edit_TILES_LST.cpp  Edit_TILES_LST.h  FRM_Convert.cpp  FRM_Convert.h  ImGui_Warning.cpp  ImGui_Warning.h  Image2Texture.cpp  Image2Texture.h  Image_Render.cpp  Load_Animation.cpp  Load_Animation.h  Load_Files.cpp  Load_Files.h  Load_Settings.cpp  Load_Settings.h  MSK_Convert.cpp  MSK_Convert.h  MiniSDL.cpp  MiniSDL.h  Palette_Cycle.cpp  Palette_Cycle.h  Preview_Image.cpp  Preview_Image.h  Preview_Tiles.cpp  Preview_Tiles.h  Proto_Files.cpp  Proto_Files.h  Save_Files.cpp  Save_Files.h  Zoom_Pan.cpp  Zoom_Pan.h  display_FRM_OpenGL.cpp  display_FRM_OpenGL.h  (+11 more)
src/config/: msk2bmpGUI.cfg
src/dependencies/GLAD/: CMakeLists.txt
src/dependencies/GLFW/lib/: glfw3.lib
src/dependencies/ImFileDialog/: CMakeLists.txt  ImFileDialog.cpp
src/dependencies/imgui-1.90.8-docking/: CMakeLists.txt
src/dependencies/imgui-docking/: CMakeLists.txt
src/msk2bmp/: .gitignore  B_Endian.h  CMakeLists.txt  Edit_Image.h  Edit_TILES_LST.cpp  FRM_Animate.h  FRM_Convert.cpp  FRM_Convert.h  Load_Animation.cpp  Load_Files.cpp  Load_Settings.cpp  Load_Settings.h  MSK_Convert.cpp  Makefile  Palette_Cycle.cpp  Save_Files.cpp  cmake_install.cmake  display_FRM_OpenGL.h  load_FRM_OpenGL.cpp  load_FRM_OpenGL.h  platform_io.cpp
src/msk2bmpGUI/: FRM_Animate.cpp  Load_Animation.h  Load_Files.h  MSK_Convert.cpp  Palette_Cycle.cpp  load_FRM_OpenGL.h
src/resources/shaders/: passthru_shader.frag  render_FRM.frag  render_PAL.frag
test/: 00000001.pat  rls.frm  test_assign_tile_id.cpp  test_crop_single_tile.cpp  test_header.h  test_tile_export.cpp
test/red landshark/: Create and Center default.fas
